--- a/css/gene.css
+++ b/css/gene.css
@@ -205,6 +205,30 @@ html {
 }
 @media screen and (min-width: 48em) {
     /* mid devices*/
+    .col-1,
+    .col-2,
+    .col-3,
+    .col-4,
+    .col-5,
+    .col-6,
+    .col-7,
+    .col-8,
+    .col-9,
+    .col-10,
+    .col-11,
+    .col-12 {
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
+        align-self: flex-start;
+        padding: 0;
+    }
     .col-m-1,
     .col-m-2,
     .col-m-3,
@@ -216,19 +240,8 @@ html {
     .col-m-9,
     .col-m-10,
     .col-m-11,
-    .col-m-12,
-    .col-1,
-    .col-2,
-    .col-3,
-    .col-4,
-    .col-5,
-    .col-6,
-    .col-7,
-    .col-8,
-    .col-9,
-    .col-10,
-    .col-11,
-    .col-12 {
+    .col-m-12
+     {
         -webkit-box-ordinal-group: 1;
         -moz-box-ordinal-group: 1;
         -webkit-order: 0;
@@ -241,73 +254,154 @@ html {
         align-self: flex-start;
         padding: 0;
     }
-    .col-m-1, .col-1 {
+    .col-1 {
         width: 8.3333%;
         -webkit-flex: 1 1 8.3333%;
         -ms-flex: 1 1 8.3333%;
         flex: 1 1 8.3333%;
     }
-    .col-m-2, .col-2 {
+    
+    .col-2 {
         width: 16.6666%;
         -webkit-flex: 1 1 16.6666%;
         -ms-flex: 1 1 16.6666%;
         flex: 1 1 16.6666%;
     }
-    .col-m-3, .col-3{
+    
+    .col-3{
         width: 25%;
         -webkit-flex: 1 1 25%;
         -ms-flex: 1 1 25%;
         flex: 1 1 25%;
     }
-    .col-m-4 , .col-4 {
+    
+     .col-4 {
         width: 33.3333%;
         -webkit-flex: 1 1 33.3333%;
         -ms-flex: 1 1 33.3333%;
         flex: 1 1 33.3333%;
     }
-    .col-m-5 , .col-5 {
+    
+    .col-5 {
         width: 41.6666%;
         -webkit-flex: 1 1 41.6666%;
         -ms-flex: 1 1 41.6666%;
         flex: 1 1 41.6666%;
     }
-    .col-m-6, .col-6 {
+    
+    .col-6 {
         width: 50%;
         -webkit-flex: 1 1 50%;
         -ms-flex: 1 1 50%;
         flex: 1 1 50%;
     }
-    .col-m-7 , .col-7 {
+    
+    .col-7 {
         width: 58.3333%;
         -webkit-flex: 1 1 58.3333%;
         -ms-flex: 1 1 58.3333%;
         flex: 1 1 58.3333%;
     }
-    .col-m-8, .col-8 {
+    
+    .col-8 {
         width: 66.6666%;
         -webkit-flex: 1 1 66.6666%;
         -ms-flex: 1 1 66.6666%;
         flex: 1 1 66.6666%;
     }
-    .col-m-9, .col-9 {
+    .col-9 {
         width: 75%;
         -webkit-flex: 1 1 75%;
         -ms-flex: 1 1 75%;
         flex: 1 1 75%;
     }
-    .col-m-10 , .col-10 {
+    
+    .col-10 {
         width: 83.3333%;
         -webkit-flex: 1 1 83.3333%;
         -ms-flex: 1 1 83.3333%;
         flex: 1 1 83.3333%;
     }
-    .col-m-11 , .col-11 {
+    .col-11 {
         width: 91.6666%;
         -webkit-flex: 1 1 91.6666%;
         -ms-flex: 1 1 91.6666%;
         flex: 1 1 91.6666%;
     }
-    .col-m-12, .col-12 {
+    .col-12 {
+        width: 100%;
+        -webkit-flex: 1 1 100%;
+        -ms-flex: 1 1 100%;
+        flex: 1 1 100%;
+    }
+    
+    .col-m-1 {
+        width: 8.3333%;
+        -webkit-flex: 1 1 8.3333%;
+        -ms-flex: 1 1 8.3333%;
+        flex: 1 1 8.3333%;
+    }
+    .col-m-2 {
+        width: 16.6666%;
+        -webkit-flex: 1 1 16.6666%;
+        -ms-flex: 1 1 16.6666%;
+        flex: 1 1 16.6666%;
+    }
+    .col-m-3 {
+        width: 25%;
+        -webkit-flex: 1 1 25%;
+        -ms-flex: 1 1 25%;
+        flex: 1 1 25%;
+    }
+    .col-m-4  {
+        width: 33.3333%;
+        -webkit-flex: 1 1 33.3333%;
+        -ms-flex: 1 1 33.3333%;
+        flex: 1 1 33.3333%;
+    }
+    .col-m-5  {
+        width: 41.6666%;
+        -webkit-flex: 1 1 41.6666%;
+        -ms-flex: 1 1 41.6666%;
+        flex: 1 1 41.6666%;
+    }
+    .col-m-6 {
+        width: 50%;
+        -webkit-flex: 1 1 50%;
+        -ms-flex: 1 1 50%;
+        flex: 1 1 50%;
+    }
+    .col-m-7 {
+        width: 58.3333%;
+        -webkit-flex: 1 1 58.3333%;
+        -ms-flex: 1 1 58.3333%;
+        flex: 1 1 58.3333%;
+    }
+    .col-m-8 {
+        width: 66.6666%;
+        -webkit-flex: 1 1 66.6666%;
+        -ms-flex: 1 1 66.6666%;
+        flex: 1 1 66.6666%;
+    }
+    .col-m-9 {
+        width: 75%;
+        -webkit-flex: 1 1 75%;
+        -ms-flex: 1 1 75%;
+        flex: 1 1 75%;
+    }
+    .col-m-10  {
+        width: 83.3333%;
+        -webkit-flex: 1 1 83.3333%;
+        -ms-flex: 1 1 83.3333%;
+        flex: 1 1 83.3333%;
+    }
+    .col-m-11  {
+        width: 91.6666%;
+        -webkit-flex: 1 1 91.6666%;
+        -ms-flex: 1 1 91.6666%;
+        flex: 1 1 91.6666%;
+    }
+    .col-m-12 {
         width: 100%;
         -webkit-flex: 1 1 100%;
         -ms-flex: 1 1 100%;
@@ -319,19 +413,8 @@ html {
 }
 @media screen and (min-width: 64em) {
     /* lg devices */
-    .col-l-1,
-    .col-l-2,
-    .col-l-3,
-    .col-l-4,
-    .col-l-5,
-    .col-l-6,
-    .col-l-7,
-    .col-l-8,
-    .col-l-9,
-    .col-l-10,
-    .col-l-11,
-    .col-l-12,
-    .col-1,
+    
+     .col-1,
     .col-2,
     .col-3,
     .col-4,
@@ -355,73 +438,171 @@ html {
         align-self: flex-start;
         padding: 0;
     }
-    .col-l-1 , .col-1{
+    .col-l-1,
+    .col-l-2,
+    .col-l-3,
+    .col-l-4,
+    .col-l-5,
+    .col-l-6,
+    .col-l-7,
+    .col-l-8,
+    .col-l-9,
+    .col-l-10,
+    .col-l-11,
+    .col-l-12
+    {
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
+        align-self: flex-start;
+        padding: 0;
+    }
+    
+    .col-1{
         width: 8.3333%;
         -webkit-flex: 1 1 8.3333%;
         -ms-flex: 1 1 8.3333%;
         flex: 1 1 8.3333%;
     }
-    .col-l-2, .col-2 {
+    .col-2 {
         width: 16.6666%;
         -webkit-flex: 1 1 16.6666%;
         -ms-flex: 1 1 16.6666%;
         flex: 1 1 16.6666%;
     }
-    .col-l-3 , .col-3{
+    .col-3{
         width: 25%;
         -webkit-flex: 1 1 25%;
         -ms-flex: 1 1 25%;
         flex: 1 1 25%;
     }
-    .col-l-4, .col-4 {
+.col-4 {
         width: 33.3333%;
         -webkit-flex: 1 1 33.3333%;
         -ms-flex: 1 1 33.3333%;
         flex: 1 1 33.3333%;
     }
-    .col-l-5 , .col-5{
+.col-5{
         width: 41.6666%;
         -webkit-flex: 1 1 41.6666%;
         -ms-flex: 1 1 41.6666%;
         flex: 1 1 41.6666%;
     }
-    .col-l-6 , .col-6{
+.col-6{
         width: 50%;
         -webkit-flex: 1 1 50%;
         -ms-flex: 1 1 50%;
         flex: 1 1 50%;
     }
-    .col-l-7, .col-7 {
+.col-7 {
         width: 58.3333%;
         -webkit-flex: 1 1 58.3333%;
         -ms-flex: 1 1 58.3333%;
         flex: 1 1 58.3333%;
     }
-    .col-l-8 , .col-8{
+ .col-8{
         width: 66.6666%;
         -webkit-flex: 1 1 66.6666%;
         -ms-flex: 1 1 66.6666%;
         flex: 1 1 66.6666%;
     }
-    .col-l-9 , .col-9{
+.col-9{
         width: 75%;
         -webkit-flex: 1 1 75%;
         -ms-flex: 1 1 75%;
         flex: 1 1 75%;
     }
-    .col-l-10 , .col-10{
+.col-10{
         width: 83.3333%;
         -webkit-flex: 1 1 83.3333%;
         -ms-flex: 1 1 83.3333%;
         flex: 1 1 83.3333%;
     }
-    .col-l-11 , .col-11{
+ .col-11{
         width: 91.6666%;
         -webkit-flex: 1 1 91.6666%;
         -ms-flex: 1 1 91.6666%;
         flex: 1 1 91.6666%;
     }
-    .col-l-12, .col-12 {
+.col-12 {
+        width: 100%;
+        -webkit-flex: 1 1 100%;
+        -ms-flex: 1 1 100%;
+        flex: 1 1 100%;
+    }
+    .col-l-1 {
+        width: 8.3333%;
+        -webkit-flex: 1 1 8.3333%;
+        -ms-flex: 1 1 8.3333%;
+        flex: 1 1 8.3333%;
+    }
+    .col-l-2 {
+        width: 16.6666%;
+        -webkit-flex: 1 1 16.6666%;
+        -ms-flex: 1 1 16.6666%;
+        flex: 1 1 16.6666%;
+    }
+    .col-l-3 {
+        width: 25%;
+        -webkit-flex: 1 1 25%;
+        -ms-flex: 1 1 25%;
+        flex: 1 1 25%;
+    }
+    .col-l-4 {
+        width: 33.3333%;
+        -webkit-flex: 1 1 33.3333%;
+        -ms-flex: 1 1 33.3333%;
+        flex: 1 1 33.3333%;
+    }
+    .col-l-5 {
+        width: 41.6666%;
+        -webkit-flex: 1 1 41.6666%;
+        -ms-flex: 1 1 41.6666%;
+        flex: 1 1 41.6666%;
+    }
+    .col-l-6 {
+        width: 50%;
+        -webkit-flex: 1 1 50%;
+        -ms-flex: 1 1 50%;
+        flex: 1 1 50%;
+    }
+    .col-l-7 {
+        width: 58.3333%;
+        -webkit-flex: 1 1 58.3333%;
+        -ms-flex: 1 1 58.3333%;
+        flex: 1 1 58.3333%;
+    }
+    .col-l-8 {
+        width: 66.6666%;
+        -webkit-flex: 1 1 66.6666%;
+        -ms-flex: 1 1 66.6666%;
+        flex: 1 1 66.6666%;
+    }
+    .col-l-9 {
+        width: 75%;
+        -webkit-flex: 1 1 75%;
+        -ms-flex: 1 1 75%;
+        flex: 1 1 75%;
+    }
+    .col-l-10 {
+        width: 83.3333%;
+        -webkit-flex: 1 1 83.3333%;
+        -ms-flex: 1 1 83.3333%;
+        flex: 1 1 83.3333%;
+    }
+    .col-l-11 {
+        width: 91.6666%;
+        -webkit-flex: 1 1 91.6666%;
+        -ms-flex: 1 1 91.6666%;
+        flex: 1 1 91.6666%;
+    }
+    .col-l-12 {
         width: 100%;
         -webkit-flex: 1 1 100%;
         -ms-flex: 1 1 100%;
