--- a/css/gene.css
+++ b/css/gene.css
@@ -78,7 +78,31 @@ html {
 .col-9,
 .col-10,
 .col-11,
-.col-12 {
+.col-12,
+.col-m-1,
+.col-m-2,
+.col-m-3,
+.col-m-4,
+.col-m-5,
+.col-m-6,
+.col-m-7,
+.col-m-8,
+.col-m-9,
+.col-m-10,
+.col-m-11,
+.col-m-12,
+.col-l-1,
+.col-l-2,
+.col-l-3,
+.col-l-4,
+.col-l-5,
+.col-l-6,
+.col-l-7,
+.col-l-8,
+.col-l-9,
+.col-l-10,
+.col-l-11,
+.col-l-12 {
     float: left;
     width: 100%;
     -webkit-box-ordinal-group: 1;
@@ -92,6 +116,7 @@ html {
     -ms-flex-item-align: start;
     align-self: flex-start;
     padding: 2px;
+    clear: both;
 }
 .col-nr-1,
 .col-nr-2,
@@ -240,8 +265,7 @@ html {
     .col-m-9,
     .col-m-10,
     .col-m-11,
-    .col-m-12
-     {
+    .col-m-12 {
         -webkit-box-ordinal-group: 1;
         -moz-box-ordinal-group: 1;
         -webkit-order: 0;
@@ -260,49 +284,42 @@ html {
         -ms-flex: 1 1 8.3333%;
         flex: 1 1 8.3333%;
     }
-    
     .col-2 {
         width: 16.6666%;
         -webkit-flex: 1 1 16.6666%;
         -ms-flex: 1 1 16.6666%;
         flex: 1 1 16.6666%;
     }
-    
-    .col-3{
+    .col-3 {
         width: 25%;
         -webkit-flex: 1 1 25%;
         -ms-flex: 1 1 25%;
         flex: 1 1 25%;
     }
-    
-     .col-4 {
+    .col-4 {
         width: 33.3333%;
         -webkit-flex: 1 1 33.3333%;
         -ms-flex: 1 1 33.3333%;
         flex: 1 1 33.3333%;
     }
-    
     .col-5 {
         width: 41.6666%;
         -webkit-flex: 1 1 41.6666%;
         -ms-flex: 1 1 41.6666%;
         flex: 1 1 41.6666%;
     }
-    
     .col-6 {
         width: 50%;
         -webkit-flex: 1 1 50%;
         -ms-flex: 1 1 50%;
         flex: 1 1 50%;
     }
-    
     .col-7 {
         width: 58.3333%;
         -webkit-flex: 1 1 58.3333%;
         -ms-flex: 1 1 58.3333%;
         flex: 1 1 58.3333%;
     }
-    
     .col-8 {
         width: 66.6666%;
         -webkit-flex: 1 1 66.6666%;
@@ -315,7 +332,6 @@ html {
         -ms-flex: 1 1 75%;
         flex: 1 1 75%;
     }
-    
     .col-10 {
         width: 83.3333%;
         -webkit-flex: 1 1 83.3333%;
@@ -334,7 +350,6 @@ html {
         -ms-flex: 1 1 100%;
         flex: 1 1 100%;
     }
-    
     .col-m-1 {
         width: 8.3333%;
         -webkit-flex: 1 1 8.3333%;
@@ -353,13 +368,13 @@ html {
         -ms-flex: 1 1 25%;
         flex: 1 1 25%;
     }
-    .col-m-4  {
+    .col-m-4 {
         width: 33.3333%;
         -webkit-flex: 1 1 33.3333%;
         -ms-flex: 1 1 33.3333%;
         flex: 1 1 33.3333%;
     }
-    .col-m-5  {
+    .col-m-5 {
         width: 41.6666%;
         -webkit-flex: 1 1 41.6666%;
         -ms-flex: 1 1 41.6666%;
@@ -389,13 +404,13 @@ html {
         -ms-flex: 1 1 75%;
         flex: 1 1 75%;
     }
-    .col-m-10  {
+    .col-m-10 {
         width: 83.3333%;
         -webkit-flex: 1 1 83.3333%;
         -ms-flex: 1 1 83.3333%;
         flex: 1 1 83.3333%;
     }
-    .col-m-11  {
+    .col-m-11 {
         width: 91.6666%;
         -webkit-flex: 1 1 91.6666%;
         -ms-flex: 1 1 91.6666%;
@@ -413,8 +428,7 @@ html {
 }
 @media screen and (min-width: 64em) {
     /* lg devices */
-    
-     .col-1,
+    .col-1,
     .col-2,
     .col-3,
     .col-4,
@@ -449,8 +463,7 @@ html {
     .col-l-9,
     .col-l-10,
     .col-l-11,
-    .col-l-12
-    {
+    .col-l-12 {
         -webkit-box-ordinal-group: 1;
         -moz-box-ordinal-group: 1;
         -webkit-order: 0;
@@ -463,8 +476,7 @@ html {
         align-self: flex-start;
         padding: 0;
     }
-    
-    .col-1{
+    .col-1 {
         width: 8.3333%;
         -webkit-flex: 1 1 8.3333%;
         -ms-flex: 1 1 8.3333%;
@@ -476,61 +488,61 @@ html {
         -ms-flex: 1 1 16.6666%;
         flex: 1 1 16.6666%;
     }
-    .col-3{
+    .col-3 {
         width: 25%;
         -webkit-flex: 1 1 25%;
         -ms-flex: 1 1 25%;
         flex: 1 1 25%;
     }
-.col-4 {
+    .col-4 {
         width: 33.3333%;
         -webkit-flex: 1 1 33.3333%;
         -ms-flex: 1 1 33.3333%;
         flex: 1 1 33.3333%;
     }
-.col-5{
+    .col-5 {
         width: 41.6666%;
         -webkit-flex: 1 1 41.6666%;
         -ms-flex: 1 1 41.6666%;
         flex: 1 1 41.6666%;
     }
-.col-6{
+    .col-6 {
         width: 50%;
         -webkit-flex: 1 1 50%;
         -ms-flex: 1 1 50%;
         flex: 1 1 50%;
     }
-.col-7 {
+    .col-7 {
         width: 58.3333%;
         -webkit-flex: 1 1 58.3333%;
         -ms-flex: 1 1 58.3333%;
         flex: 1 1 58.3333%;
     }
- .col-8{
+    .col-8 {
         width: 66.6666%;
         -webkit-flex: 1 1 66.6666%;
         -ms-flex: 1 1 66.6666%;
         flex: 1 1 66.6666%;
     }
-.col-9{
+    .col-9 {
         width: 75%;
         -webkit-flex: 1 1 75%;
         -ms-flex: 1 1 75%;
         flex: 1 1 75%;
     }
-.col-10{
+    .col-10 {
         width: 83.3333%;
         -webkit-flex: 1 1 83.3333%;
         -ms-flex: 1 1 83.3333%;
         flex: 1 1 83.3333%;
     }
- .col-11{
+    .col-11 {
         width: 91.6666%;
         -webkit-flex: 1 1 91.6666%;
         -ms-flex: 1 1 91.6666%;
         flex: 1 1 91.6666%;
     }
-.col-12 {
+    .col-12 {
         width: 100%;
         -webkit-flex: 1 1 100%;
         -ms-flex: 1 1 100%;
